--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -62,7 +62,7 @@
         <div class="container__enlaces">
             <a href="https://spanuwey.com">Visitar pagina de spanuwey</a>
             <br>
-            <a href="#" class="sub">Suscribirme a spanuwey</a>
+            <a href="https://www.youtube.com/channel/UCwY-9_p8IqQ4Z32qE24-1gA?sub_confirmation=1" class="sub">Suscribirme a spanuwey</a>
         </div>
     </section>
 </body>
