--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -60,9 +60,9 @@
         </div>
         <br>
         <div class="container__enlaces">
-            <a href="https://spanuwey.com">Visitar pagina de spanuwey</a>
+            <a href="https://spanuwey.com">Visitar pagina de Spanuwey</a>
             <br>
-            <a href="https://www.youtube.com/channel/UCwY-9_p8IqQ4Z32qE24-1gA?sub_confirmation=1" class="sub">Suscribirme a spanuwey</a>
+            <a href="https://www.youtube.com/channel/UCwY-9_p8IqQ4Z32qE24-1gA?sub_confirmation=1" class="sub">Suscribirme a Spanuwey</a>
         </div>
     </section>
 </body>
