--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="container">
+    <section class="container" style="border-radius: 4px;">
         <div class="container__title">
             <h2>Cuenta de Disney plus Gratis:</h2>
         </div>
