--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <section class="container" style="border-radius: 4px;">
+    <section class="container">
         <div class="container__title">
             <h2>Cuenta de Disney plus Gratis:</h2>
         </div>
-        <div class="container__items">
+        <div class="container__items" style="border-radius: 4px;">
             <div class="container__counts">
                 <span class="container__number">1</span>
                 <div class="container__copy">
