--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -14,7 +14,7 @@
         <div class="container__title">
             <h2>Cuenta de Disney plus Gratis:</h2>
         </div>
-        <div class="container__items" style="border-radius: 4px;">
+        <div class="container__items">
             <div class="container__counts">
                 <span class="container__number">1</span>
                 <div class="container__copy">
@@ -54,15 +54,17 @@
                         <br>
                         <span>Contraseña:</span>
                         <br>
-                       Star&EcX451</p>
+                        Star&EcX451</p>
                 </div>
             </div>
         </div>
         <br>
         <div class="container__enlaces">
-            <a href="https://spanuwey.com">Visitar pagina de Spanuwey</a>
+            <a href="https://spanuwey.com">Visitar pagina de spanuwey</a>
             <br>
-            <a href="https://www.youtube.com/channel/UCwY-9_p8IqQ4Z32qE24-1gA?sub_confirmation=1" class="sub">Suscribirme a Spanuwey</a>
+            <a href="#" class="sub">Suscribirme a spanuwey</a>
+            <br>
+            <a href="https://wn.nr/pkQtZB" class="sorteo">Sorteo Internacional</a>
         </div>
     </section>
 </body>
