--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -16,45 +16,15 @@
         </div>
         <div class="container__items">
             <div class="container__counts">
-                <span class="container__number">1</span>
+                <!-- <span class="container__number">1</span> -->
                 <div class="container__copy">
                     <p>
                         <span>Correo:</span>
-                        <br>
-                        jotajota.premium+Disney3@gmail.com
-                        <br>
-                        <br>
-                        <span>Contraseña:</span>
-                        <br>
-                        Star&EcF672</p>
-                </div>
-            </div>
-            <div class="container__counts">
-                <span class="container__number">2</span>
-                <div class="container__copy">
-                    <p>
-                        <span>Correo:</span>
-                        <br>
-                        jotajota.premium+Disney4@gmail.com
+                        <span class="email">aaf63781@cuoly.com</span>
                         <br>
                         <br>
                         <span>Contraseña:</span>
-                        <br>
-                        Star&EcK562</p>
-                </div>
-            </div>
-            <div class="container__counts">
-                <span class="container__number">3</span>
-                <div class="container__copy">
-                    <p>
-                        <span>Correo:</span>
-                        <br>
-                        jotajota.premium+Disney5@gmail.com
-                        <br>
-                        <br>
-                        <span>Contraseña:</span>
-                        <br>
-                        Star&EcX451</p>
+                        spanuwey!</p>
                 </div>
             </div>
         </div>
