--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -20,11 +20,11 @@
                 <div class="container__copy">
                     <p>
                         <span>Correo:</span>
-                        <span class="email">aaf63781@cuoly.com</span>
+                        <span class="email">paked66513@zcai77.com</span>
                         <br>
                         <br>
                         <span>Contraseña:</span>
-                        spanuwey!</p>
+                        112233spanuwey</p>
                 </div>
             </div>
         </div>
