--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -20,7 +20,7 @@
                 <div class="container__copy">
                     <p>
                         <span>Correo:</span>
-                        <span class="email">paked66513@zcai77.com</span>
+                        <span class="email">opeinelleorigene@gmail.com</span>
                         <br>
                         <br>
                         <span>Contraseña:</span>
