--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -24,7 +24,7 @@
                         <br>
                         <br>
                         <span>Contraseña:</span>
-                        112233spanuwey</p>
+                        12spanuwey3</p>
                 </div>
             </div>
         </div>
