--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -12,19 +12,17 @@
 <body>
     <section class="container">
         <div class="container__title">
-            <h2>Cuenta de Disney plus Gratis:</h2>
+            <h2>Link refer aqui</h2>
         </div>
         <div class="container__items">
             <div class="container__counts">
                 <!-- <span class="container__number">1</span> -->
                 <div class="container__copy">
                     <p>
-                        <span>Correo:</span>
-                        <span class="email">opeinelleorigene@gmail.com</span>
-                        <br>
-                        <br>
-                        <span>Contraseña:</span>
-                        12spanuwey3</p>
+                        <span>
+                            https://yb4-video.xyz/8816292765462675/ ¡Regístrese para obtener un bono de recién llegado de 10 dólares estadounidenses! Gané más de 200 dólares estadounidenses viendo el video aquí, así que puedes probarlo..
+                        </span>
+                    </p>
                 </div>
             </div>
         </div>
