--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -28,11 +28,11 @@
         </div>
         <br>
         <div class="container__enlaces">
-            <a href="https://spanuwey.com">Visitar pagina de spanuwey</a>
+            <a href="https://spanuwey.com">Gana $100 USD ahora</a>
             <br>
-            <a href="#" class="sub">Suscribirme a spanuwey</a>
+            <a href="#" class="sub">Gana dinero para paypal</a>
             <br>
-            <a href="https://wn.nr/pkQtZB" class="sorteo">Sorteo Internacional</a>
+            <a href="https://wn.nr/pkQtZB" class="sorteo">Visitar pagina para ganar dinero</a>
         </div>
     </section>
 </body>
