--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -28,7 +28,7 @@
         </div>
         <br>
         <div class="container__enlaces">
-            <a href="https://sweatco.in/i/.origenefs">Gana 15$ | Sweatcoin </a>
+            <a href="https://sweatco.in/i/origenefs">Gana 15$ | Sweatcoin </a>
             <br>
             <a href="https://yb4-video.xyz/8816292765462675/" class="sub">Gana dinero para paypal</a>
             <br>
