--- a/Cuentas Ds/index.html
+++ b/Cuentas Ds/index.html
@@ -19,9 +19,7 @@
                 <!-- <span class="container__number">1</span> -->
                 <div class="container__copy">
                     <p>
-                        <span>
-                            https://yb4-video.xyz/8816292765462675/ ¡Regístrese para obtener un bono de recién llegado de 10 dólares estadounidenses! Gané más de 200 dólares estadounidenses viendo el video aquí, así que puedes probarlo..
-                        </span>
+                        
                     </p>
                 </div>
             </div>
@@ -30,9 +28,9 @@
         <div class="container__enlaces">
             <a href="https://sweatco.in/i/origenefs">Gana 15$ | Sweatcoin </a>
             <br>
-            <a href="https://yb4-video.xyz/8816292765462675/" class="sub">Gana dinero para paypal</a>
+            <a href="" class="sub">Gana dinero para paypal</a>
             <br>
-            <a href="https://yb4-video.xyz/8816292765462675/" class="sorteo">Visitar pagina para ganar dinero</a>
+            <a href="" class="sorteo">Visitar pagina para ganar dinero</a>
         </div>
     </section>
 </body>
